# Hijarr

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DNS_HIJACKING_GUIDE.md  Dockerfile  GEMINI.md  README.md  SRN.md  docker-compose.yml  go.mod  go.sum  hijarr.code-workspace  pyproject.toml  test.Dockerfile
.github/workflows/: update-srnrelay.yml
cmd/hijarr/: main.go
docs/: CODEREF.md  migration.md  progress.md
docs/llm_note/: NOTE_TEMPLATE.md  note_20260418_sonnet.md  note_20260418_sonnet_dns_guide.md
frontend/: package.json  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/api/: index.ts
frontend/src/components/: GenericTable.vue
frontend/src/router/: index.ts
frontend/src/views/: Config.vue  DBManager.vue  Dashboard.vue  Jobs.vue  MediaLibrary.vue  Stats.vue  (+1 more)
internal/cache/: cache.go  metadata_cache.go
internal/config/: config.go
internal/db/: db.go
internal/logger/: logger.go  logger_test.go
internal/maintenance/: migration.go  migration_test.go  runner.go  store.go
internal/metrics/: metrics.go
internal/migrations/: migrations.go  srn_resign_v2.go
internal/proxy/: proxy_test.go  torznab.go  tvdb.go  util.go
internal/scheduler/: scheduler.go  sonarr_sync.go
internal/sonarr/: client.go
internal/srn/: provider.go  relay.go  srn.go  store.go
internal/state/: store.go
internal/tmdb/: client.go
internal/util/: subtitle.go
internal/web/: api.go  db_api.go  index.html  media_library.go
src/: proxy.py
test_data/: test_parser.txt  test_queries.txt  tvdb_ids.txt
tools/: split_db.sh
tools/coderef/: main.go
