[project]
name = "lagarr"
version = "0.1.0"
description = "A Torznab proxy middleware for Sonarr and DMHY to handle Chinese title translation and season mapping."
authors = [
    {name = "Yuxiang Luo", email = "yuxiang.lll@outlook.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn (>=0.43.0,<0.44.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "yapf (>=0.43.0,<0.44.0)"
]
